[gd_scene load_steps=2 format=3 uid="uid://boss_intro_ui"]

[ext_resource type="Script" path="res://scripts/boss_intro_ui.gd" id="1_intro"]

[node name="BossIntroUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_intro")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)
z_index = -1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BossName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BOSSÂêçÁß∞"
horizontal_alignment = 1

[node name="BossTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BOSSÁß∞Âè∑"
horizontal_alignment = 1

[node name="HPBarContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HPBar" type="ProgressBar" parent="VBoxContainer/HPBarContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPText" type="Label" parent="VBoxContainer/HPBarContainer"]
layout_mode = 2
text = "HP: 20/20"

[node name="AbilitiesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
separation = 10

[node name="Ability1" type="Label" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
text = "‚öîÔ∏è ËøëÊàò‰∏ìÂÆ∂"
horizontal_alignment = 1

[node name="Ability2" type="Label" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
text = "üí• ÂÜ≤ÊíûÊîªÂáª"
horizontal_alignment = 1

[node name="Ability3" type="Label" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
text = "üîÆ ÂºπÂπïÊîªÂáª"
horizontal_alignment = 1

[node name="WarningLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ö†Ô∏è ÂáÜÂ§áÊàòÊñóÔºÅ‚ö†Ô∏è"
horizontal_alignment = 1

[node name="VSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 250.0
grow_horizontal = 2
text = "VS"
horizontal_alignment = 1
