extends Control
class_name BossIntroUI

# ============ Bossæˆ˜é¢„å‘Šç•Œé¢ ============
# åœ¨Bossæˆ˜å¼€å§‹å‰æ˜¾ç¤ºBossä¿¡æ¯

signal intro_completed()

@onready var boss_name_label = $VBoxContainer/BossName
@onready var boss_title_label = $VBoxContainer/BossTitle
@onready var hp_bar = $VBoxContainer/HPBarContainer/HPBar
@onready var hp_text = $VBoxContainer/HPBarContainer/HPText
@onready var warning_label = $VBoxContainer/WarningLabel
@onready var abilities_container = $VBoxContainer/AbilitiesContainer
@onready var vs_label = $VSLabel

var boss_name: String = ""
var boss_title: String = ""
var max_hp: int = 20
var abilities: Array = []
var intro_timer: float = 0.0
const INTRO_DURATION: float = 3.5  # é¢„å‘ŠæŒç»­æ—¶é—´

func _ready():
	# åˆå§‹éšè—
	modulate.a = 0.0

	# è®¾ç½®å­—ä½“æ ·å¼
	_setup_styles()

func _setup_styles():
	# Bossåç§° - å¤§å·é‡‘è‰²å­—ä½“
	boss_name_label.add_theme_font_size_override("font_size", 72)
	boss_name_label.add_theme_color_override("font_color", Color(1, 0.8, 0.2, 1))
	boss_name_label.add_theme_color_override("font_shadow_color", Color(0.5, 0.2, 0, 0.8))
	boss_name_label.add_theme_constant_override("shadow_offset_x", 4)
	boss_name_label.add_theme_constant_override("shadow_offset_y", 4)

	# Bossç§°å· - ä¸­å·ç™½è‰²å­—ä½“
	boss_title_label.add_theme_font_size_override("font_size", 36)
	boss_title_label.add_theme_color_override("font_color", Color(0.9, 0.9, 0.9, 1))

	# HPæ¡æ ·å¼
	hp_bar.add_theme_font_size_override("font_size", 28)
	hp_text.add_theme_font_size_override("font_size", 24)
	hp_text.add_theme_color_override("font_color", Color(1, 0.95, 0.85, 1))

	# è­¦å‘Šæ–‡å­— - é—ªçƒçº¢è‰²
	warning_label.add_theme_font_size_override("font_size", 32)
	warning_label.add_theme_color_override("font_color", Color(1, 0.2, 0.2, 1))

	# VSæ ‡ç­¾
	vs_label.add_theme_font_size_override("font_size", 96)
	vs_label.add_theme_color_override("font_color", Color(1, 0.3, 0.3, 1))

	# èƒ½åŠ›æ ‡ç­¾æ ·å¼
	for ability_label in abilities_container.get_children():
		ability_label.add_theme_font_size_override("font_size", 22)
		ability_label.add_theme_color_override("font_color", Color(0.8, 0.75, 0.6, 1))

# æ˜¾ç¤ºBossé¢„å‘Š
func show_boss_intro(name: String, title: String, hp: int, boss_abilities: Array = []):
	boss_name = name
	boss_title = title
	max_hp = hp
	abilities = boss_abilities

	# æ›´æ–°UIå†…å®¹
	boss_name_label.text = boss_name
	boss_title_label.text = boss_title
	hp_text.text = "HP: %d" % max_hp

	# æ›´æ–°HPæ¡
	_update_hp_bar(max_hp, max_hp)

	# æ›´æ–°èƒ½åŠ›åˆ—è¡¨
	_update_abilities(abilities)

	# æ’­æ”¾é¢„å‘ŠåŠ¨ç”»
	_play_intro_animation()

# æ›´æ–°HPæ¡æ˜¾ç¤º
func _update_hp_bar(current: int, maximum: int):
	var hp_percent = float(current) / maximum
	hp_bar.value = hp_percent * 100
	hp_text.text = "HP: %d / %d" % [current, maximum]

	# æ ¹æ®è¡€é‡ç™¾åˆ†æ¯”æ”¹å˜é¢œè‰²
	if hp_percent > 0.6:
		hp_bar.modulate = Color(0.3, 0.9, 0.3)
	elif hp_percent > 0.3:
		hp_bar.modulate = Color(1, 0.8, 0.2)
	else:
		hp_bar.modulate = Color(1, 0.2, 0.2)

# æ›´æ–°èƒ½åŠ›åˆ—è¡¨
func _update_abilities(ability_list: Array):
	# æ¸…ç©ºç°æœ‰èƒ½åŠ›æ ‡ç­¾
	for child in abilities_container.get_children():
		child.queue_free()

	# æ·»åŠ æ–°èƒ½åŠ›æ ‡ç­¾
	var ability_names = {
		"è¿‘æˆ˜": "âš”ï¸ è¿‘æˆ˜ä¸“å®¶",
		"å¼¹å¹•": "ğŸ”® å¼¹å¹•æ”»å‡»",
		"å†²æ’": "ğŸ’¥ å†²æ’",
		"ä¼ é€": "âœ¨ ä¼ é€æ‰“å‡»",
		"éœ‡åœ°": "ğŸŒ‹ éœ‡åœ°æ³¢",
		"ç‹‚æš´": "ğŸ”¥ ç‹‚æš´æ¨¡å¼"
	}

	for ability in ability_list:
		var label = Label.new()
		label.text = ability_names.get(ability, "ğŸ”¹ " + ability)
		label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		abilities_container.add_child(label)

# æ’­æ”¾é¢„å‘ŠåŠ¨ç”»
func _play_intro_animation():
	# æ·¡å…¥æ•ˆæœ
	var tween = create_tween()
	tween.set_parallel(true)

	# èƒŒæ™¯/ä¸»å®¹å™¨æ·¡å…¥
	tween.tween_property(self, "modulate:a", 1.0, 0.5)

	# VSæ ‡ç­¾ç¼©æ”¾åŠ¨ç”»
	tween.tween_property(vs_label, "scale", Vector2(1.5, 1.5), 0.3)
	tween.tween_property(vs_label, "scale", Vector2(1.0, 1.0), 0.2).set_delay(0.3)
	tween.tween_property(vs_label, "modulate:a", 0.0, 0.5).set_delay(2.5)

	# è­¦å‘Šæ–‡å­—é—ªçƒ
	tween.tween_property(warning_label, "modulate:a", 0.3, 0.4)
	tween.tween_property(warning_label, "modulate:a", 1.0, 0.4).set_delay(0.4)
	tween.tween_property(warning_label, "modulate:a", 0.3, 0.4).set_delay(0.8)
	tween.tween_property(warning_label, "modulate:a", 1.0, 0.4).set_delay(1.2)
	tween.tween_property(warning_label, "modulate:a", 0.3, 0.4).set_delay(1.6)

	# HPæ¡å¡«å……åŠ¨ç”»
	tween.tween_property(hp_bar, "value", 100.0, 1.0).set_delay(0.3).set_trans(Tween.TRANS_BACK)

	# ç­‰å¾…åŠ¨ç”»å®Œæˆåéšè—
	await get_tree().create_timer(INTRO_DURATION).timeout

	# æ·¡å‡º
	var fade_out = create_tween()
	fade_out.tween_property(self, "modulate:a", 0.0, 0.5)

	await fade_out.finished
	intro_completed.emit()
	hide()
